k8s-manifests/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    service: keycloak
    layer: security
spec:
  selector:
    matchLabels:
      service: keycloak
      layer: security
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: keycloak
        layer: security
    spec:
      containers:
        - image: docker.io/opelhustchen/keycloak.x:v3
          args: ["--proxy edge", "--hostname-strict-https=false"]
          name: keycloak
          resources:
            limits:
              memory: 512Mi
          ports:
            - containerPort: 8443
            - containerPort: 8080
