k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    konghq.com/strip-path: "true"
    kubernetes.io/ingress.class: kong
  name: keycloak
  labels:
    service: keycloak
    layer: security
spec:
  rules:
    - host: auth-k3s-dis.mct.local 
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port: 
                  number: 8080
